# shiv_nadar

./: .gitignore  README.md  start_backend.sh  test.py
.github/workflows/: main.yml
backend/: main.py  mainapi.py  pyproject.toml  school portal qa dataset.csv
backend/llm/: __init__.py  assignments.txt  datasetinfo.csv  help2.ipynb  llmtorch.py  main.py  portal_data.txt
backend/logs/: events.out.tfevents.1747547529.Rachits-Laptop.local  events.out.tfevents.1747547595.Rachits-Laptop.local  events.out.tfevents.1747548181.Rachits-Laptop.local
backend/testing/: main.py  test.txt
front_end/: .env.example  .env.sentry-build-plugin  .gitignore  drizzle.config.ts  next.config.js  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts
front_end/src/: instrumentation-client.ts
front_end/src/app/: layout.tsx  page.tsx
front_end/src/app/api/send/: route.ts
front_end/src/app/reset_password/: page.tsx  signin.css
front_end/src/app/signin/: page.tsx
front_end/src/app/signup/: page.tsx  signup.css
front_end/src/components/: chat.tsx  controls.tsx  email-template.tsx  message_cards.tsx  navbar.tsx  reset-password.tsx  sign-in.tsx  sign-up.tsx
front_end/src/components/ui/: card.tsx  placeholders-and-vanish-input.tsx  tooltip.tsx
front_end/src/lib/: auth-client.ts  auth.ts  posthog.ts
front_end/src/server/: queries.ts
front_end/src/server/db/: schema.ts
front_end/src/styles/: globals.css
summary/: Tectonic.toml
summary/src/: main.tex
summary/src/tau-class/: README.md  tau.cls
